@@ -104,6 +104,12 @@ def parse_args(args):
     option_group_definitions.append(('Testing Options', [
         optparse.make_option('--wtf-only', action='store_const', const='TestWTF', dest='api_binary',
                              help='Only build, check and run TestWTF'),
+        optparse.make_option('--webkit-only', action='store_const', const='TestWebKitAPI', dest='api_binary',
+                             help='Only check and run TestWebKitAPI'),
+        optparse.make_option('--web-core-only', action='store_const', const='TestWebCore', dest='api_binary',
+                             help='Only check and run TestWebCore.exe (Windows only)'),
+        optparse.make_option('--webkit-legacy-only', action='store_const', const='TestWebKitLegacy', dest='api_binary',
+                             help='Only check and run TestWebKitLegacy.exe (Windows only)'),
         optparse.make_option('-d', '--dump', action='store_true', default=False,
                              help='Dump all test names without running them'),
         optparse.make_option('--build', dest='build', action='store_true', default=True,
